# jp-spec-kit

./: .coverage  .flowspec-plugin.yml  .gitignore  .mcp.json  .pre-commit-config.yaml  .release-commit  .spec-kit-compatibility.yml  .specify-plugin.yml  AGENTS.md  AUTONOMOUS-SESSION-COMPLETE.md  AUTONOMOUS-SESSION-SUMMARY.md  BACKLOG-MVP-COMPLETE.md  CHANGELOG.md  CLAUDE.md  COMMIT_AND_PR.sh  COMMIT_PLAN.md  CONTRIBUTING-AGENTS.md  CONTRIBUTING.md  DOCKER_SCOUT_POLICY.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION-COMPLETE.md  LAYERED-EXTENSION-ARCHITECTURE.md  MARKETPLACE.md  Makefile  PR_DESCRIPTION.md  PR_TEMPLATE.md  README-AUTONOMOUS-SESSION.md  README.md  SCHEMA_VALIDATION_SUMMARY.md  SECURITY.md  SUPPORT.md  TASK-220-FINAL-REPORT.md  TRANSFORMATION-SUMMARY.md  VALIDATION-SUMMARY.md  VERIFY-COMPLETE.md  WORKFLOW_SETUP_SUMMARY.md  backlog.md  coverage.json  dec19-todo.jsonl  demo_migration.py  (+15 more)
.agents/: ai-ml-engineer.md  backend-code-reviewer.md  backend-engineer.md  business-validator.md  executive-tech-recruiter.md  frontend-code-reviewer.md  frontend-engineer.md  go-expert-advisor.md  go-expert-developer-enhanced.md  java-developer-enhanced.md  java-developer.md  js-ts-expert-developer-enhanced.md  js-ts-expert-developer.md  platform-engineer-enhanced.md  platform-engineer.md  playwright-test-healer.md  product-requirements-manager-enhanced.md  product-requirements-manager.md  python-code-reviewer-enhanced.md  python-code-reviewer.md  quality-guardian.md  release-manager.md  researcher.md  secure-by-design-engineer.md  software-architect-enhanced.md  software-architect.md  sre-agent.md  star-framework-writer.md  tech-writer.md
.agents-bench/: executive-tech-recruiter.md  go-expert-advisor.md  go-expert-developer-enhanced.md  java-developer-enhanced.md  java-developer.md  js-ts-expert-developer-enhanced.md  js-ts-expert-developer.md  platform-engineer.md  playwright-test-generator.md  playwright-test-planner.md  product-requirements-manager.md  python-code-reviewer-enhanced.md  python-code-reviewer.md  software-architect.md  star-framework-writer.md
.backlog/: config.yml
.beads/: README.md
.claude/: AGENTS-INTEGRATION.md  INTEGRATION-COMPLETE.md  load-agent.py  settings.json
.claude-plugin/: README.md  marketplace.json  plugin.json
.devcontainer/: Dockerfile  README.md  devcontainer.json  flowspec.omp.json  install-netlog.sh  post-create.sh  post-start-netlog.sh
.flowspec/: github-pr-safety.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  labeler.yml  security-config.yml
.migration-backup-20251210_115339/: specflow_workflow.yml
.serena/: project.yml
.stacks/: README.md  STACK-ORGANIZATION.md  STACK-SELECTION-GUIDE.md  full-stack-react-typescript.md  mobile-frontend-go-backend.md  tray-app-cross-platform.md  vscode-extension-typescript.md
TODO/: TASK-008-COMPLETION-REPORT.md  TASK-011-GO-TEST-RESULTS.md  TASK-011-STATUS-REPORT.md  completed-task-003.md  completed-task-004.md  completed-task-008.md  task-001.md  task-002.md  task-003.md  task-004-completion.md  task-004.md  task-005.md  task-006.md  task-007.md  task-009-suggestions.md  task-20-suggestions.md
backlog/: CLAUDE.md  config.yml
build-docs/: AGENTS.md  CONTRIBUTING-AGENTS.md  RELEASE-ASSESSMENT.md  REQ-claude-code-skill-integration.md  TASK-220-FINAL-REPORT.md  adare-execution-order.md  (+18 more)
(+2933 files in other folders)
