[project]
name = "specify-cli"

version = "0.0.204"



description = "JP Spec Kit - A layered extension of GitHub Spec Kit with multi-language support and advanced agent orchestration for Spec-Driven Development (SDD)."
requires-python = ">=3.11"
dependencies = [
    "typer",
    "rich",
    "httpx[socks]",
    "platformdirs",
    "readchar",
    "truststore>=0.10.4",
    "pyyaml>=6.0",
    "keyring>=25.0.0",
    "jsonschema>=4.0.0",
]

[project.scripts]
specify = "specify_cli:main"

[project.entry-points.pytest11]
specify_ac = "specify_cli.pytest_plugin"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/specify_cli"]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.8.0",
]

