[project]
name = "flowspec-cli"

version = "0.4.1"



description = "Flowspec - A layered extension of GitHub Spec Kit with multi-language support and advanced agent orchestration for Spec-Driven Development (SDD)."
requires-python = ">=3.11"
dependencies = [
    "typer",
    "rich",
    "httpx[socks]",
    "platformdirs",
    "readchar",
    "truststore>=0.10.4",
    "pyyaml>=6.0",
    "keyring>=25.0.0",
    "jsonschema>=4.0.0",
    "mcp>=0.1.0",
]

[project.scripts]
flowspec = "flowspec_cli:main"
# `specify` is a legacy alias for flowspec CLI - NOT related to /flow:specify command
specify = "flowspec_cli:main"

[project.entry-points.pytest11]
flowspec_ac = "flowspec_cli.pytest_plugin"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/flowspec_cli"]

# Include templates directory in the package
[tool.hatch.build.targets.wheel.force-include]
"src/flowspec_cli/templates" = "flowspec_cli/templates"

[project.optional-dependencies]
dast = [
    "playwright>=1.48.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.8.0",
]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "git_sync: marks tests that require git sync operations (skip in CI with '-m \"not git_sync\"')",
]

